--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
 # python=3.8
 matplotlib
-beautifulsoup4==4.10.0
-charset-normalizer==2.0.12
-click==8.0.4
-decorator==4.4.2
-emoji==1.7.0
-filelock==3.6.0
-gdown==4.4.0
-huggingface-hub==0.4.0
-idna==3.3
+beautifulsoup4
+charset-normalizer
+click
+decorator
+emoji
+filelock
+gdown
+huggingface-hub
+idna
 igraph==0.9.9
 joblib==1.1.0
-jupyter-core==4.6.3
 leidenalg==0.8.9
 networkx==2.7.1
 nltk==3.7
 numpy==1.22.3
 packaging==21.3
-pandas==1.4.1
+pandas
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.0.1
@@ -46,3 +45,9 @@ tornado==6.0.4
 transformers==4.17.0
 typing_extensions==4.1.1
 urllib3==1.26.9
+ftfy
+regex
+wget
+git+https://github.com/openai/CLIP.git
+jupyter-core
+tensorboard
